// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`admin_console/team_channel_settings/team/TeamProfile should match snapshot (not cloud, freemium disabled 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="btn btn-secondary btn-danger"
            type="button"
          >
            <i
              class="icon icon-archive-outline"
            />
            Archive Team
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamProfile should match snapshot with isArchived true 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="btn btn-secondary btn-danger"
            type="button"
          >
            <i
              class="icon icon-archive-arrow-up-outline"
            />
            Unarchive Team
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamProfile__Cloud restore should not be disabled when below teams limit 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="btn btn-secondary btn-danger"
            type="button"
          >
            <i
              class="icon icon-archive-arrow-up-outline"
            />
            Unarchive Team
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamProfile__Cloud should match snapshot - archived, at teams limit 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="btn btn-secondary btn-danger"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-archive-arrow-up-outline"
            />
            Unarchive Team
          </button>
          <button
            class="btn btn-secondary"
            type="button"
          >
            View upgrade options
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamProfile__Cloud should match snapshot - not archived, at teams limit 1`] = `
<div>
  <div
    class="AdminPanel clearfix "
    id="team_profile"
  >
    <div
      class="header"
    >
      <div>
        <h3>
          Team Profile
        </h3>
        <div
          class="mt-2"
        >
          Summary of the team, including team name and description.
        </div>
      </div>
    </div>
    <div
      class="group-teams-and-channels"
    >
      <div
        class="group-teams-and-channels--body"
      >
        <div
          class="d-flex"
        >
          <div
            class="large-team-image-col"
          >
            <div
              class="TeamIcon TeamIcon__lg no-hover"
            >
              <div
                class="TeamIcon__content no-hover"
              >
                <div
                  aria-label="name Team Initials"
                  class="TeamIcon__initials TeamIcon__initials__lg"
                  data-testid="teamIconInitial"
                  role="img"
                >
                  na
                </div>
              </div>
            </div>
          </div>
          <div
            class="team-desc-col team-desc-col--edit"
          >
            <div
              class="row row-bottom-padding"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset Input_fieldset___legend"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend Input_legend___focus"
                    for="input_"
                  >
                                            
                    Team Name
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <input
                      aria-label="Team Name"
                      class="Input form-control medium Input__focus"
                      data-testid="teamNameInput"
                      id="teamName"
                      maxlength="64"
                      placeholder="Team Name"
                      type="text"
                      value="name"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="Input_container"
              >
                <div
                  class="Input_fieldset"
                  data-testid="input-wrapper"
                >
                  <label
                    class="Input_legend"
                    for="input_"
                  >
                                            
                  </label>
                  <div
                    class="Input_wrapper"
                  >
                    <textarea
                      aria-label="Team Description"
                      class="Input form-control medium"
                      data-testid="teamDescriptionInput"
                      id="teamDescription"
                      maxlength="50"
                      placeholder="Team Description"
                      rows="3"
                      type="textarea"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminChannelDetails_archiveContainer"
        >
          <button
            class="btn btn-secondary btn-danger"
            type="button"
          >
            <i
              class="icon icon-archive-outline"
            />
            Archive Team
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
